--- a/style.css
+++ b/style.css
@@ -57,3 +57,66 @@ h2 {
     cursor: grab; /* Изменение курсора при наведении */
     border-color: cornflowerblue; /* Смена цвета рамки при наведении (если необходимо) */
 }
+
+
+/*post---------------*/
+
+
+.card {
+    width: 850px;
+    height: 600px;
+    perspective: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+
+.post-info, .comments {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.post-info {
+    background-color: dimgray;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.comments {
+    background-color: cornflowerblue;
+    transform: rotateY(180deg);
+}
+
+#container{
+    margin: 80px auto 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 30px;
+    background-color: darkgray;
+    border-radius: 30px;
+
+}
+
+#container:hover{
+    background-color: cornflowerblue;
+    cursor: grab;
+}
